Update and rename Text classification using distillBERT and ktrain-Copy1.ipynb to Text classification using distillBERT.ipynb

--- a/Text classification using distillBERT.ipynb
+++ b/Text classification using distillBERT.ipynb
@@ -15,7 +15,7 @@
    "id": "bb9e4d57",
    "metadata": {},
    "source": [
-    "DATASET DESCRIPTION: We use the 20_newsgroups dataset. The dataset used for this task is the 20_newsgroup dataset (link: 20_newsgroup), which contains data, organized into 20 different newsgroups, each corresponding to a different topic."
+    "DATASET DESCRIPTION: using the 20_newsgroups dataset. The dataset used for this task is the 20_newsgroup dataset (link: 20_newsgroup), which contains data, organized into 20 different newsgroups, each corresponding to a different topic."
    ]
   },
   {
