Update Text classification using distillBERT.ipynb

--- a/Text classification using distillBERT.ipynb
+++ b/Text classification using distillBERT.ipynb
@@ -242,7 +242,7 @@
    "id": "8fed1579",
    "metadata": {},
    "source": [
-    "ktrain - ktrain is a Python library that provides an easy-to-use interface for building, training, and deploying deep learning models. It is built on top of the popular deep learning library TensorFlow and is designed to simplify the process of building and training deep learning models.\n",
+    "Installing ktrain which is a Python library that provides an easy-to-use interface for building, training, and deploying deep learning models. It is built on top of the popular deep learning library TensorFlow and is designed to simplify the process of building and training deep learning models.\n",
     "\n",
     "ktrain includes pre-processing tools for text and image data, as well as pre-built models for text classification, sequence labeling, image classification, and more. It also provides support for transfer learning, allowing you to fine-tune pre-trained models on your own data."
    ]
